# dgit

./: .dockerignore  .env.example  Dockerfile  README.md  render.yaml
axl/: .dockerignore  .gitignore  AGENTS.md  Makefile  README.md  go.mod  go.sum  node-config.json
axl/.buildkite/: pipeline.yaml
axl/.buildkite/tools/: build-oci-image.sh
axl/api/: a2a.go  a2a_test.go  handler.go  handler_test.go  mcp.go  mcp_test.go  recv.go  recv_test.go  send.go  send_test.go  tcp_helpers.go  tcp_helpers_test.go  topology.go  topology_test.go
axl/cmd/node/: config.go  main.go
axl/containerfiles/: Dockerfile
axl/docs/: api.md  architecture.md  configuration.md  examples.md  integrations.md
axl/examples/python-client/: a2a_client.py  client.py  convergecast.py  requirements.txt
axl/integrations/: pyproject.toml
axl/integrations/a2a_serving/: a2a_server.py  test_a2a_server.py
axl/integrations/mcp_routing/: mcp_router.py  test_mcp_router.py
axl/internal/a2a/: a2a_stream.go  a2a_stream_test.go  a2a_utils.go  a2a_utils_test.go
axl/internal/mcp/: mcp_stream.go  mcp_stream_test.go  (+2 more)
contracts/: .gitignore  README.md
contracts/script/: DeployGitSubnameRegistrar.s.sol
contracts/src/: GitSubnameRegistrar.sol
contracts/test/: GitSubnameRegistrar.t.sol
docker/: entrypoint.sh
node/: README.md  build.zig  build.zig.zon
node/src/: command.zig  main.zig  serve.zig  ssh_helper.zig  test.zig
scripts/: dgit_axl_bridge.py  docker_smoke_test.sh
web/: .dockerignore  Dockerfile  README.md  index.html  package-lock.json
web/src/: App.css  App.tsx  index.css
(+11 files in other folders)
