[project]
name = "node-agent-integrations"
version = "0.1.0"
description = "Agentic protocol integrations for the node"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.9.0",
    "a2a-sdk>=1.0.0",
    "httpx>=0.28.1",
    "uvicorn>=0.34.2",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-aiohttp>=1.0.0",
    "mcp>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["a2a_serving", "mcp_routing"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[project.scripts]
mcp-router = "mcp_routing.mcp_router:main"
a2a-server = "a2a_serving.a2a_server:main"
